@@ -9,6 +9,7 @@ Sigla:
 
 0.9.5 - released 2008-12-??
 
++ Added getSetting(), setSetting(), getAllSettings() and setAllSettings() to Plugin class for plugin devs - issue 128
 + Added comments plugin option to display to-be-moderated comments on plugin tab (default true)
 + Added MySQL port to install screen. Thanks gilles.doge - issue 107
 + Added new events - issue 94
